--- a/review/package.json
+++ b/review/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "02_session_2_25_2018",
+  "name": "review",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "blah": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
